<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_item">Add Item</string>
    <string name="save_button">Save</string>
    <string name="enter_item">Enter Item</string>
    <string name="uantity">Enter Quantity</string>
    <string name="color">Enter Color</string>
    <string name="size">Enter Size</string>
    <string name="exit_text">Exit</string>
    <string name="item_name">Item Name</string>
    <string name="update_button">Update</string>
</resources>
