<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/popup_layout_id"
    android:padding="24dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:textSize="18dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/item_name_id"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:hint="@string/enter_item"/>
        <EditText
            android:id="@+id/quantity_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/uantity"/>
        <EditText
            android:id="@+id/color_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/color"/>
        <EditText
            android:id="@+id/size_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/size"/>
            <Button
                android:id="@+id/save_button_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_light_background"
                android:background="@color/colorAccent"
                android:text="@string/save_button"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>