<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/popup_layout_id"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/add_item"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/item_name_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_item"
                android:maxLines="2" />

            <EditText
                android:id="@+id/item_quantity_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uantity"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:id="@+id/item_color_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color"
                android:maxLines="1" />

            <EditText
                android:id="@+id/item_size_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:inputType="number"
                android:maxLines="1" />

            <Button
                android:id="@+id/update_button_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/update_button"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>